# python_api_shop_food

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
shop_food/: app.py  config.py  injector.py  integration_config.py
shop_food/contracts/: abstract_model.py  interface_db.py
shop_food/infra/database/: abstract_repository.py  base_model.py  db.py  relation.py  util_model.py
shop_food/infra/database/mongo/: db.py  parse.py
shop_food/infra/database/util/: parse.py
shop_food/infra/http/: base_controller.py  response.py  route_crud.py
shop_food/infra/http/form_request/: add_order_item.py
shop_food/infra/http/request/: add_order_item.py
shop_food/order/: route.py
shop_food/order/controller/: order_controller.py
shop_food/order/model/: address.py  item.py  order.py  status.py  user.py
shop_food/order/repository/: item_repository.py  order_repository.py
shop_food/product/: controller.py  model.py  repository.py  route.py
shop_food/product/controller/: product_controller.py
shop_food/product/model/: category.py  product.py
shop_food/product/repository/: category_repository.py  product_repository.py
tests/: app.py  conftest.py
tests/integration/order/repository/: order_repository_test.py
tests/integration/product/repository/: category_repository_test.py  product_repository_test.py
tests/unit/: app.py
tests/unit/contracts/: abstract_model_test.py
tests/unit/infra/database/: abstract_repository_test.py
tests/unit/order/model/: address_test.py  (+3 more)
tests/util/: database.py
(+6 files in other folders)
